# Rote

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
src/rote/: __init__.py  rote.py
