[metadata]
name = Rote
version = 0.0.1
author = Sebastian Grans
author_email = sebastian.grans@gmail.com
description = A package consisting of common functions related to computer vision
long_description = file: README.md
long_description_content_type = text/markdown
url = http://example.com

[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    numpy

[options.packages.find]
where = src